# herdr-reviewr

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  herdr-plugin.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: RELEASING.md  herdr-api-notes.md
docs/plans/2026-06-24-diff-viewer/: 01-walking-skeleton.md  02-full-viewer.md  main.md  polish-backlog.md
docs/plans/2026-06-25-all-files-tab/: 02-review-surface.md  main.md
docs/plans/2026-06-25-merge-gate/: backlog.md
docs/plans/2026-06-27-footer-keys-overlay/: plan.md
docs/plans/2026-07-09-open-close-actions/: plan.md
docs/plans/2026-07-17-kinship-pr-detection/: plan.md
examples/: bench_latency.rs
herdr/: sidebar.sh
scripts/: bench_tui.py  qa-install.sh  swap-binary.sh
scripts/bench-results/: distill-quickwins-run1.json  step2b-garfield-run1.json  step2b-garfield-run2.json
specs/: AGENTS.md  README.md  config.md  diff-view.md  file-list.md  find-in-file.md  forge-host.md  forge-providers.md  herdr-host.md  input.md  markdown.md  overview.md  pr-tab.md  review-model.md  search.md  spec-template.md  theme.md  tui.md
src/: app.rs  azure_devops.rs  config.rs  diff.rs  exec.rs  export.rs  file_list.rs  forge.rs  git.rs  gitlab.rs  herdr.rs  highlight.rs  keymap.rs  lib.rs  model.rs  turn.rs  ui.rs  world.rs
tests/: app_flow.rs  git_repo.rs  pr_candidates.rs  render.rs
tests/common/: mod.rs
(+6 files in other folders)
