[package]
name = "herdr-review"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A herdr-native review sidebar: browse an agent's changes and send comments back to chat, in the terminal."
authors = ["Dmitry Persiyanov <dmitry.persiyanov@gmail.com>"]
license = "MIT"
repository = "https://github.com/persijano/herdr-review"
readme = "README.md"
keywords = ["herdr", "tui", "diff", "review", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
ratatui = "0.30"
serde_json = "1"
similar = { version = "3.1.1", features = ["text", "inline"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
two-face = "0.5.1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows for an application binary (vs a public library):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"

[profile.release]
strip = true
lto = "thin"
